crates/weaveffi-cli/tests/snapshots/python_shapes__README_md.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
<!-- Generated by WeaveFFI [VERSION] from api.yml -->
<!-- DO NOT EDIT. Your changes will be overwritten. -->
<!-- To regenerate: weaveffi generate api.yml -o <out> -->

# shapes (Python)

Python bindings for the `shapes` native library, built on `ctypes`.

## Requirements

- Python 3.9 or later
- The native library (`libshapes.so`, `libshapes.dylib`, or `shapes.dll`)

## Install

```bash
pip install .
```

## Loading the native library

The bindings load the library from `SHAPES_LIBRARY` when it is set (a full path),
then from inside the installed package, then from the system loader's search
path.

## Usage

```python
import shapes
```

<!-- END README.md -->
