crates/weaveffi-cli/tests/snapshots/python_shapes__pyproject_toml.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from api.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate api.yml -o <out>

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shapes"
version = "0.1.0"
description = "Native bindings for shapes"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["shapes"]

[tool.setuptools.package-data]
"shapes" = ["py.typed", "*.pyi", "*.so", "*.dylib", "*.dll"]

# END pyproject.toml
