crates/weaveffi-cli/tests/snapshots/python_shapes__setup_py.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from weaveffi.yml
# DO NOT EDIT — your changes will be overwritten.
# To regenerate: weaveffi generate weaveffi.yml -o <out>

from setuptools import setup

setup(
    name="weaveffi",
    version="0.1.0",
    packages=["weaveffi"],
)

# END setup.py
