crates/weaveffi-cli/tests/snapshots/python_shapes__weaveffi_weaveffi_py.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from weaveffi.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate weaveffi.yml -o <out>

"""WeaveFFI Python ctypes bindings (auto-generated)"""
import contextlib
import ctypes
import os
import platform
import struct
from dataclasses import dataclass
from enum import IntEnum
from typing import Callable, Dict, Iterator, List, Optional


class WeaveFFIError(Exception):
    def __init__(self, code: int, message: str) -> None:
        self.code = code
        self.message = message
        super().__init__(f"({code}) {message}")


class _WeaveFFIErrorStruct(ctypes.Structure):
    _fields_ = [
        ("code", ctypes.c_int32),
        ("message", ctypes.c_char_p),
        ("payload_ptr", ctypes.c_void_p),
        ("payload_len", ctypes.c_size_t),
    ]


def _load_library() -> ctypes.CDLL:
    # An explicit path in WEAVEFFI_LIBRARY wins, so callers can point at a
    # specific build artifact regardless of its file name or location.
    override = os.environ.get("WEAVEFFI_LIBRARY")
    if override:
        return ctypes.CDLL(override)
    system = platform.system()
    if system == "Darwin":
        name = "libweaveffi.dylib"
    elif system == "Windows":
        name = "weaveffi.dll"
    else:
        name = "libweaveffi.so"
    return ctypes.CDLL(name)


_lib = _load_library()
_lib.weaveffi_error_clear.argtypes = [ctypes.POINTER(_WeaveFFIErrorStruct)]
_lib.weaveffi_error_clear.restype = None
# Async completion callbacks receive a heap-boxed error the consumer owns;
# weaveffi_error_free releases the message, the payload, and the box.
_lib.weaveffi_error_free.argtypes = [ctypes.POINTER(_WeaveFFIErrorStruct)]
_lib.weaveffi_error_free.restype = None
# The free helpers take raw addresses (`c_void_p`) so wrappers can release
# owned producer allocations they hold as plain integers or typed pointers.
_lib.weaveffi_free_string.argtypes = [ctypes.c_void_p]
_lib.weaveffi_free_string.restype = None
_lib.weaveffi_free_bytes.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
_lib.weaveffi_free_bytes.restype = None


def _check_error(err: _WeaveFFIErrorStruct) -> None:
    if err.code != 0:
        code = err.code
        message = err.message.decode("utf-8") if err.message else ""
        _lib.weaveffi_error_clear(ctypes.byref(err))
        raise WeaveFFIError(code, message)


class _PointerGuard(contextlib.AbstractContextManager):
    def __init__(self, ptr, free_fn) -> None:
        self.ptr = ptr
        self._free_fn = free_fn

    def __exit__(self, *exc) -> bool:
        if self.ptr is not None:
            self._free_fn(self.ptr)
            self.ptr = None
        return False


def _string_to_bytes(s: Optional[str]) -> Optional[bytes]:
    if s is None:
        return None
    return s.encode("utf-8")


def _bytes_to_string(ptr) -> Optional[str]:
    if ptr is None:
        return None
    return ptr.decode("utf-8")


def _take_string(ptr) -> Optional[str]:
    """Copy an owned C string (a raw address) and free the producer buffer."""
    if not ptr:
        return None
    _s = ctypes.string_at(ptr).decode("utf-8")
    _lib.weaveffi_free_string(ptr)
    return _s


class _BufferWriter:
    """Encodes values into the WeaveFFI value-buffer wire format:
    little-endian, packed, no alignment."""

    def __init__(self) -> None:
        self._buf = bytearray()

    def finish(self) -> bytes:
        return bytes(self._buf)

    def write_bool(self, v) -> None:
        self._buf.append(1 if v else 0)

    def write_i8(self, v: int) -> None:
        self._buf += struct.pack("<b", v)

    def write_u8(self, v: int) -> None:
        self._buf += struct.pack("<B", v)

    def write_i16(self, v: int) -> None:
        self._buf += struct.pack("<h", v)

    def write_u16(self, v: int) -> None:
        self._buf += struct.pack("<H", v)

    def write_i32(self, v: int) -> None:
        self._buf += struct.pack("<i", v)

    def write_u32(self, v: int) -> None:
        self._buf += struct.pack("<I", v)

    def write_i64(self, v: int) -> None:
        self._buf += struct.pack("<q", v)

    def write_u64(self, v: int) -> None:
        self._buf += struct.pack("<Q", v)

    def write_f32(self, v: float) -> None:
        self._buf += struct.pack("<f", v)

    def write_f64(self, v: float) -> None:
        self._buf += struct.pack("<d", v)

    def write_len(self, n: int) -> None:
        self._buf += struct.pack("<I", n)

    def write_option_flag(self, present) -> None:
        self._buf.append(1 if present else 0)

    def write_string(self, v: str) -> None:
        _b = v.encode("utf-8")
        self.write_len(len(_b))
        self._buf += _b

    def write_bytes(self, v: bytes) -> None:
        self.write_len(len(v))
        self._buf += bytes(v)


class _BufferReader:
    """Decodes values from the WeaveFFI value-buffer wire format, rejecting
    truncated buffers, invalid flag bytes, invalid UTF-8, and oversized
    length prefixes."""

    def __init__(self, data: bytes) -> None:
        self._data = memoryview(data)
        self._pos = 0

    def _take(self, n: int, what: str) -> memoryview:
        if len(self._data) - self._pos < n:
            raise WeaveFFIError(-1, f"malformed value buffer: truncated {what}")
        _view = self._data[self._pos:self._pos + n]
        self._pos += n
        return _view

    def read_bool(self) -> bool:
        _b = self._take(1, "bool")[0]
        if _b > 1:
            raise WeaveFFIError(-1, "malformed value buffer: invalid bool byte")
        return _b == 1

    def read_i8(self) -> int:
        return struct.unpack("<b", self._take(1, "i8"))[0]

    def read_u8(self) -> int:
        return struct.unpack("<B", self._take(1, "u8"))[0]

    def read_i16(self) -> int:
        return struct.unpack("<h", self._take(2, "i16"))[0]

    def read_u16(self) -> int:
        return struct.unpack("<H", self._take(2, "u16"))[0]

    def read_i32(self) -> int:
        return struct.unpack("<i", self._take(4, "i32"))[0]

    def read_u32(self) -> int:
        return struct.unpack("<I", self._take(4, "u32"))[0]

    def read_i64(self) -> int:
        return struct.unpack("<q", self._take(8, "i64"))[0]

    def read_u64(self) -> int:
        return struct.unpack("<Q", self._take(8, "u64"))[0]

    def read_f32(self) -> float:
        return struct.unpack("<f", self._take(4, "f32"))[0]

    def read_f64(self) -> float:
        return struct.unpack("<d", self._take(8, "f64"))[0]

    def read_len(self) -> int:
        _n = struct.unpack("<I", self._take(4, "length prefix"))[0]
        if _n > len(self._data) - self._pos:
            raise WeaveFFIError(
                -1, "malformed value buffer: length prefix exceeds remaining bytes"
            )
        return _n

    def read_option_flag(self) -> bool:
        _b = self._take(1, "option flag")[0]
        if _b > 1:
            raise WeaveFFIError(-1, "malformed value buffer: invalid option flag")
        return _b == 1

    def read_string(self) -> str:
        _n = self.read_len()
        try:
            return str(self._take(_n, "string data"), "utf-8")
        except UnicodeDecodeError as _e:
            raise WeaveFFIError(
                -1, "malformed value buffer: string is not valid UTF-8"
            ) from _e

    def read_bytes(self) -> bytes:
        _n = self.read_len()
        return bytes(self._take(_n, "bytes data"))

    def expect_end(self) -> None:
        if self._pos != len(self._data):
            raise WeaveFFIError(-1, "malformed value buffer: trailing bytes")


def _decode_buffer(data: bytes, read_fn):
    """Decode exactly one value from `data` using `read_fn(reader)`."""
    _r = _BufferReader(data)
    _v = read_fn(_r)
    _r.expect_end()
    return _v


def _take_buffer(ptr, length) -> bytes:
    """Copy an owned value buffer (a raw address) and release it with
    weaveffi_free_bytes."""
    if not ptr:
        return b""
    _data = ctypes.string_at(ptr, length) if length else b""
    _lib.weaveffi_free_bytes(ptr, ctypes.c_size_t(length))
    return _data


# === Module: shapes ===

class Shape:
    """An algebraic shape (sum type with associated data)"""

    class Tag(IntEnum):
        # The empty shape (a unit variant)
        Empty = 0
        # A circle with a radius
        Circle = 1
        # An axis-aligned rectangle
        Rectangle = 2
        # An integer-bounded shape (exercises narrow + wide ints)
        Bounded = 3
        # A labeled shape with a small count
        Labeled = 4

    @property
    def tag(self) -> "Shape.Tag":
        """The discriminant of this value's active variant."""
        return type(self).TAG


@dataclass
class ShapeEmpty(Shape):
    """The empty shape (a unit variant)"""

    TAG = Shape.Tag.Empty


@dataclass
class ShapeCircle(Shape):
    """A circle with a radius"""

    TAG = Shape.Tag.Circle

    # Radius in points
    radius: float


@dataclass
class ShapeRectangle(Shape):
    """An axis-aligned rectangle"""

    TAG = Shape.Tag.Rectangle

    width: float
    height: float


@dataclass
class ShapeBounded(Shape):
    """An integer-bounded shape (exercises narrow + wide ints)"""

    TAG = Shape.Tag.Bounded

    min: int
    max: int
    weight: int


@dataclass
class ShapeLabeled(Shape):
    """A labeled shape with a small count"""

    TAG = Shape.Tag.Labeled

    label: str
    count: int


Shape.Empty = ShapeEmpty
Shape.Circle = ShapeCircle
Shape.Rectangle = ShapeRectangle
Shape.Bounded = ShapeBounded
Shape.Labeled = ShapeLabeled


def _write_Shape(_w: _BufferWriter, value: "Shape") -> None:
    if isinstance(value, ShapeEmpty):
        _w.write_i32(0)
        return
    if isinstance(value, ShapeCircle):
        _w.write_i32(1)
        _w.write_f64(value.radius)
        return
    if isinstance(value, ShapeRectangle):
        _w.write_i32(2)
        _w.write_f32(value.width)
        _w.write_f32(value.height)
        return
    if isinstance(value, ShapeBounded):
        _w.write_i32(3)
        _w.write_i16(value.min)
        _w.write_i16(value.max)
        _w.write_u64(value.weight)
        return
    if isinstance(value, ShapeLabeled):
        _w.write_i32(4)
        _w.write_string(value.label)
        _w.write_u8(value.count)
        return
    raise WeaveFFIError(-1, "unknown Shape variant")


def _read_Shape(_r: _BufferReader) -> "Shape":
    _tag = _r.read_i32()
    if _tag == 0:
        return ShapeEmpty()
    if _tag == 1:
        return ShapeCircle(
            radius=_r.read_f64(),
        )
    if _tag == 2:
        return ShapeRectangle(
            width=_r.read_f32(),
            height=_r.read_f32(),
        )
    if _tag == 3:
        return ShapeBounded(
            min=_r.read_i16(),
            max=_r.read_i16(),
            weight=_r.read_u64(),
        )
    if _tag == 4:
        return ShapeLabeled(
            label=_r.read_string(),
            count=_r.read_u8(),
        )
    raise WeaveFFIError(-1, f"malformed value buffer: unknown Shape tag {_tag}")


def _pack_Shape(value: "Shape") -> bytes:
    _w = _BufferWriter()
    _write_Shape(_w, value)
    return _w.finish()


def _unpack_Shape(data: bytes) -> "Shape":
    return _decode_buffer(data, _read_Shape)


class Channel(IntEnum):
    """A plain C-style enum (no payloads)"""
    Red = 0
    Green = 1
    Blue = 2


@dataclass
class Numerics:
    """One field per supported numeric primitive"""

    a: int
    b: int
    c: int
    d: int
    e: int
    f: int
    g: int
    h: int
    i: float
    j: float


def _write_Numerics(_w: _BufferWriter, value: "Numerics") -> None:
    _w.write_i8(value.a)
    _w.write_i16(value.b)
    _w.write_i32(value.c)
    _w.write_i64(value.d)
    _w.write_u8(value.e)
    _w.write_u16(value.f)
    _w.write_u32(value.g)
    _w.write_u64(value.h)
    _w.write_f32(value.i)
    _w.write_f64(value.j)


def _read_Numerics(_r: _BufferReader) -> "Numerics":
    return Numerics(
        a=_r.read_i8(),
        b=_r.read_i16(),
        c=_r.read_i32(),
        d=_r.read_i64(),
        e=_r.read_u8(),
        f=_r.read_u16(),
        g=_r.read_u32(),
        h=_r.read_u64(),
        i=_r.read_f32(),
        j=_r.read_f64(),
    )


def _pack_Numerics(value: "Numerics") -> bytes:
    _w = _BufferWriter()
    _write_Numerics(_w, value)
    return _w.finish()


def _unpack_Numerics(data: bytes) -> "Numerics":
    return _decode_buffer(data, _read_Numerics)


def describe(shape: "Shape") -> str:
    """Render a shape to a string
    """
    _fn = _lib.weaveffi_shapes_describe
    _fn.argtypes = [ctypes.c_char_p, ctypes.c_size_t, ctypes.POINTER(_WeaveFFIErrorStruct)]
    _fn.restype = ctypes.c_void_p
    _shape_buf = _pack_Shape(shape)
    _err = _WeaveFFIErrorStruct()
    _result = _fn(_shape_buf, len(_shape_buf), ctypes.byref(_err))
    _check_error(_err)
    return _take_string(_result) or ""


def scale(shape: "Shape", factor: float) -> "Shape":
    """Scale a shape by a factor, returning a new shape
    """
    _fn = _lib.weaveffi_shapes_scale
    _fn.argtypes = [ctypes.c_char_p, ctypes.c_size_t, ctypes.c_double, ctypes.POINTER(ctypes.c_size_t), ctypes.POINTER(_WeaveFFIErrorStruct)]
    _fn.restype = ctypes.c_void_p
    _shape_buf = _pack_Shape(shape)
    _err = _WeaveFFIErrorStruct()
    _out_len = ctypes.c_size_t(0)
    _result = _fn(_shape_buf, len(_shape_buf), factor, ctypes.byref(_out_len), ctypes.byref(_err))
    _check_error(_err)
    _data = _take_buffer(_result, _out_len.value)
    return _unpack_Shape(_data)


def sum_bytes(values: bytes) -> int:
    """Sum a list of bytes into a wide integer (numerics smoke)
    """
    _fn = _lib.weaveffi_shapes_sum_bytes
    _fn.argtypes = [ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t, ctypes.POINTER(_WeaveFFIErrorStruct)]
    _fn.restype = ctypes.c_uint64
    _values_arr = (ctypes.c_uint8 * len(values))(*values)
    _err = _WeaveFFIErrorStruct()
    _result = _fn(_values_arr, len(values), ctypes.byref(_err))
    _check_error(_err)
    return _result


def make_numerics(a: int, b: int, c: int, d: int, e: int, f: int, g: int, h: int, i: float, j: float) -> "Numerics":
    """Build a Numerics struct from every numeric primitive
    """
    _fn = _lib.weaveffi_shapes_make_numerics
    _fn.argtypes = [ctypes.c_int8, ctypes.c_int16, ctypes.c_int32, ctypes.c_int64, ctypes.c_uint8, ctypes.c_uint16, ctypes.c_uint32, ctypes.c_uint64, ctypes.c_float, ctypes.c_double, ctypes.POINTER(ctypes.c_size_t), ctypes.POINTER(_WeaveFFIErrorStruct)]
    _fn.restype = ctypes.c_void_p
    _err = _WeaveFFIErrorStruct()
    _out_len = ctypes.c_size_t(0)
    _result = _fn(a, b, c, d, e, f, g, h, i, j, ctypes.byref(_out_len), ctypes.byref(_err))
    _check_error(_err)
    _data = _take_buffer(_result, _out_len.value)
    return _unpack_Numerics(_data)

# END weaveffi.py
