crates/weaveffi-cli/tests/snapshots/python_shapes__weaveffi_weaveffi_pyi.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from weaveffi.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate weaveffi.yml -o <out>

from enum import IntEnum
from typing import Callable, Dict, Iterator, List, Optional, Type

class WeaveFFIError(Exception):
    code: int
    message: str
    def __init__(self, code: int, message: str) -> None: ...

# An algebraic shape (sum type with associated data)
class Shape:
    class Tag(IntEnum):
        # The empty shape (a unit variant)
        Empty: int
        # A circle with a radius
        Circle: int
        # An axis-aligned rectangle
        Rectangle: int
        # An integer-bounded shape (exercises narrow + wide ints)
        Bounded: int
        # A labeled shape with a small count
        Labeled: int
    Empty: Type["ShapeEmpty"]
    Circle: Type["ShapeCircle"]
    Rectangle: Type["ShapeRectangle"]
    Bounded: Type["ShapeBounded"]
    Labeled: Type["ShapeLabeled"]
    @property
    def tag(self) -> "Shape.Tag": ...

# The empty shape (a unit variant)
class ShapeEmpty(Shape):
    TAG: "Shape.Tag"
    def __init__(self) -> None: ...

# A circle with a radius
class ShapeCircle(Shape):
    TAG: "Shape.Tag"
    radius: float
    def __init__(self, radius: float) -> None: ...

# An axis-aligned rectangle
class ShapeRectangle(Shape):
    TAG: "Shape.Tag"
    width: float
    height: float
    def __init__(self, width: float, height: float) -> None: ...

# An integer-bounded shape (exercises narrow + wide ints)
class ShapeBounded(Shape):
    TAG: "Shape.Tag"
    min: int
    max: int
    weight: int
    def __init__(self, min: int, max: int, weight: int) -> None: ...

# A labeled shape with a small count
class ShapeLabeled(Shape):
    TAG: "Shape.Tag"
    label: str
    count: int
    def __init__(self, label: str, count: int) -> None: ...

# A plain C-style enum (no payloads)
class Channel(IntEnum):
    Red: int
    Green: int
    Blue: int

# One field per supported numeric primitive
class Numerics:
    a: int
    b: int
    c: int
    d: int
    e: int
    f: int
    g: int
    h: int
    i: float
    j: float
    def __init__(self, a: int, b: int, c: int, d: int, e: int, f: int, g: int, h: int, i: float, j: float) -> None: ...

# Render a shape to a string
def describe(shape: "Shape") -> str: ...

# Scale a shape by a factor, returning a new shape
def scale(shape: "Shape", factor: float) -> "Shape": ...

# Sum a list of bytes into a wide integer (numerics smoke)
def sum_bytes(values: bytes) -> int: ...

# Build a Numerics struct from every numeric primitive
def make_numerics(a: int, b: int, c: int, d: int, e: int, f: int, g: int, h: int, i: float, j: float) -> "Numerics": ...

# END weaveffi.pyi
